src/app.pcss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
	:root {
		--background: 0 0% 100%;
		--foreground: 240 10% 3.9%;

		--muted: 240 4.8% 95.9%;
		--muted-foreground: 240 3.8% 46.1%;

		--popover: 0 0% 100%;
		--popover-foreground: 240 10% 3.9%;

		--card: 0 0% 100%;
		--card-foreground: 240 10% 3.9%;

		--border: 240 5.9% 90%;
		--input: 240 5.9% 90%;

		--primary: 240 5.9% 10%;
		--primary-foreground: 0 0% 98%;

		--secondary: 240 4.8% 95.9%;
		--secondary-foreground: 240 5.9% 10%;

		--accent: 240 4.8% 95.9%;
		--accent-foreground: 240 5.9% 10%;

		--destructive: 0 72.2% 50.6%;
		--destructive-foreground: 0 0% 98%;

		--ring: 240 10% 3.9%;

		--radius: 0.5rem;
	}

	.dark {
		--background: 240 10% 3.9%;
		--foreground: 0 0% 98%;

		--muted: 240 3.7% 15.9%;
		--muted-foreground: 240 5% 64.9%;

		--popover: 240 10% 3.9%;
		--popover-foreground: 0 0% 98%;

		--card: 240 10% 3.9%;
		--card-foreground: 0 0% 98%;

		--border: 240 3.7% 15.9%;
		--input: 240 3.7% 15.9%;

		--primary: 0 0% 98%;
		--primary-foreground: 240 5.9% 10%;

		--secondary: 240 3.7% 15.9%;
		--secondary-foreground: 0 0% 98%;

		--accent: 240 3.7% 15.9%;
		--accent-foreground: 0 0% 98%;

		--destructive: 0 62.8% 30.6%;
		--destructive-foreground: 0 0% 98%;

		--ring: 240 4.9% 83.9%;
	}
}

@layer base {
	* {
		@apply border-border;
	}
	body {
		@apply bg-background text-foreground;
	}
}

@layer base {
	.prose .anchor {
		@apply invisible absolute no-underline;

		margin-left: -1em;
		padding-right: 0.5em;
		width: 80%;
		max-width: 700px;
		cursor: pointer;
	}

	.anchor:hover {
		@apply visible;
	}

	.prose a {
		@apply decoration-neutral-400 decoration-[0.1em] underline-offset-2 transition-all dark:decoration-neutral-600;
	}

	.prose .anchor:after {
		@apply text-neutral-300 dark:text-neutral-700;
		content: '#';
	}

	.prose *:hover > .anchor {
		@apply visible;
	}

	.prose pre prose-inline-code {
		@apply overflow-x-auto rounded-lg border border-neutral-200 bg-neutral-50 dark:border-neutral-900 dark:bg-neutral-900;
	}

	.prose code {
		@apply rounded-lg px-1 py-0.5;
	}

	.prose pre code {
		@apply p-0;
		border: initial;
		line-height: 1.5;
	}

	.prose code span {
		@apply font-medium;
	}

	.prose img {
		@apply rounded-md;
	}

	.prose h2,
	h3,
	h4 {
		@apply font-medium tracking-tighter !important;
	}

	.prose strong {
		@apply font-medium;
	}

	.prose > :first-child {
		/* Override removing top margin, causing layout shift */
		margin-top: 1.25em !important;
		margin-bottom: 1.25em !important;
	}

	pre::-webkit-scrollbar {
		display: none;
	}

	pre {
		-ms-overflow-style: none; /* IE and Edge */
		scrollbar-width: none; /* Firefox */
	}

	/* Remove Safari input shadow on mobile */
	input[type='text'],
	input[type='email'] {
		-webkit-appearance: none;
		-moz-appearance: none;
		appearance: none;
	}

	.prose .tweet a {
		text-decoration: inherit;
		font-weight: 500;
	}

	.prose .callout > p {
		margin: 0 !important;
	}

	.title {
		text-wrap: balance;
	}

	.prose > p,
	.prose > ol,
	.prose > ul,
	.prose > li,
	.prose > span,
	.prose > code,
	.prose > pre {
		font-size: 15px;
	}
}

